# bazelalias

./: .gitignore  BUILD  Cargo.toml  README.md  WORKSPACE  cargo-bazel-lock.json
src/: main.rs
