[package]
name = "bazelalias"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand-07 = { package = "rand", version = "0.7" }

[workspace.metadata.raze]
workspace_path = "//remote/cargo_workspace/cargo"
gen_workspace_prefix = "remote_cargo_workspace"
genmode = "Remote"
default_gen_buildrs = true
